WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276736
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-horiz-002-expected.html
https://bugs.webkit.org/show_bug.cgi?id=276736
Summary
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-m...
alan
Reported
2024-07-17 14:11:10 PDT
ssia
Attachments
Patch
(25.84 KB, patch)
2024-07-17 14:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(36.39 KB, patch)
2024-07-17 16:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-17 14:13:21 PDT
Created
attachment 471906
[details]
Patch
alan
Comment 2
2024-07-17 16:10:38 PDT
Created
attachment 471910
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-18 11:14:52 PDT
Committed
281095@main
(263e16f5b28e): <
https://commits.webkit.org/281095@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471910
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-07-18 11:15:25 PDT
<
rdar://problem/132024874
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug