[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-baseline-multi-line-horiz-002-expected.html https://bugs.webkit.org/show_bug.cgi?id=276736

Reviewed by Antti Koivisto.

Add support for reversed item order when logically first item becomes last (and vice versa).

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/alignment/flex-align-baseline-flex-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/alignment/flex-align-baseline-flex-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/alignment/flex-align-baseline-flex-003-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/alignment/flex-align-baseline-flex-004-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-align-baseline-flex-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-align-baseline-flex-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-align-baseline-flex-003-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/alignment/grid-align-baseline-flex-004-expected.txt:
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::firstBaselineCandidateOnLine const):
(WebCore::RenderFlexibleBox::lastBaselineCandidateOnLine const):
(WebCore::RenderFlexibleBox::flexItemForFirstBaseline const):
(WebCore::RenderFlexibleBox::flexItemForLastBaseline const):
(WebCore::RenderFlexibleBox::firstLogicalBaselineCandidateOnLine const): Deleted.
(WebCore::RenderFlexibleBox::lastLogicalBaselineCandidateOnLine const): Deleted.
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/281095@main